add some styling changes for the plan_row partial so that they appear on one line and add a way to get to the Plan new page

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,1 +1,9 @@
-<%= render partial: 'plan_row', collection: @plans, as: :plan %>
+<h1>Plans</h1>
+
+<p>
+  <%= link_to "New Plan", new_plan_path %>
+  </p>
+
+<ul>
+  <%= render partial: 'plan_row', collection: @plans, as: :plan %>
+</ul>
