--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,3 +1,7 @@
 <h1>New Plan</h1>
 
-<%= render "form", plan: @plan, exercises: @exercises %>
+<% if @plan.days.blank? %>
+  <%= render "initialize_days_form", plan: @plan %>
+<% else %>
+  <%= render "form", plan: @plan, exercises: @exercises %>
+<% end %>
