--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -9,10 +9,13 @@
       <ol>
         <% day_entries.each do |entry| %>
           <li>
-            <%= entry.exercise.name %>
-            <% if entry.sets.present? || entry.reps.present? %>
-              (<%= "#{entry.sets} sets" if entry.sets.present? %><%= " × " if entry.sets.present? && entry.reps.present? %><%= "#{entry.reps} reps" if entry.reps.present? %>)
-            <% end %>
+            <label>
+              <input type="checkbox" name="entry_<%= entry.id %>" id="entry_<%= entry.id %>">
+              <%= entry.exercise.name %>
+              <% if entry.sets.present? || entry.reps.present? %>
+                (<%= "#{entry.sets} sets" if entry.sets.present? %><%= " × " if entry.sets.present? && entry.reps.present? %><%= "#{entry.reps} reps" if entry.reps.present? %>)
+              <% end %>
+            </label>
           </li>
         <% end %>
       </ol>
