--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -11,7 +11,7 @@
           <% day_entries.each do |entry| %>
             <li>
               <label class="<%= entry.completed? ? "completed" : "" %>">
-                <%= check_box_tag "entry_#{entry.id}", entry.id, false, id: "entry_#{entry.id}", checked: entry.completed?, data: { action: "checklist#toggle", completion_url: entry_complete_path(entry) } %>
+                <%= check_box_tag "entry_#{entry.id}", entry.id, false, id: "entry_#{entry.id}", checked: entry.completed?, data: { action: "checklist#toggle:prevent", completion_url: entry_complete_path(entry) } %>
                 <%= entry.exercise.name + " " + entry.humanized_sets_and_reps %>
               </label>
             </li>
