--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
       </ul>
     </nav>
     <main class='main'>
+      <%= render "shared/flash" %>
       <%= yield %>
     </main>
     <nav class='bottom-nav'>
