--- a/app/views/shared/_nav_links.html.erb
+++ b/app/views/shared/_nav_links.html.erb
@@ -1,5 +1,11 @@
 <li>
+  <%= link_to "Dashboard", root_path, class: "nav-link" %>
+</li>
+<li>
   <%= link_to "Plans", plans_path, class: "nav-link" %>
+</li>
+<li>
+  <%= link_to "Workouts", workouts_path, class: "nav-link" %>
 </li>
 <% if Current.user %>
   <li>
