--- a/app/views/plan_enrollments/show.html.erb
+++ b/app/views/plan_enrollments/show.html.erb
@@ -18,7 +18,7 @@
                     <p>Workout started on <%= @plan_enrollment.workouts.started.find_by(day: day).created_at.strftime("%B %d, %Y") %></p>
                     <%= link_to "Resume Workout", workout_path(@plan_enrollment.workouts.started.find_by(day: day)), method: :put %>
                 <% else %>
-                    <%= button_to "Start Workout    ", workouts_path(workout: { plan_enrollment_id: @plan_enrollment.id, day: day }), method: :post %>
+                    <%= button_to "Start Workout", workouts_path(workout: { plan_enrollment_id: @plan_enrollment.id, day: day }), method: :post, class: "btn-primary" %>
                 <% end %>
                 <ul>
                     <% entries.each do |entry| %>
