--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,8 +4,20 @@
   <section>
     <h2>Active Plan</h2>
     <% if @active_plan_enrollment.present? %>
-      <article>
-        <h3><%= link_to @active_plan_enrollment.plan.name, plan_enrollment_path(@active_plan_enrollment) %></h3>
+      <article class="bg-card border border-primary/30 p-4 rounded-md">
+        <div class="flex flex-col gap-2 border-b border-muted/70 pb-2">
+          <h3 class="text-primary"><%= @active_plan_enrollment.plan.name %></h3>
+          <p class="text-muted-foreground"><%= @active_plan_enrollment.plan.days %> day workout plan</p>
+        </div>
+        <div class="mt-2 py-4">
+          <% if @active_plan_enrollment.workouts.started.any? %>
+            <p class="text-muted-foreground py-4">Workout started on <%= @active_plan_enrollment.workouts.started.first.created_at.strftime("%B %d, %Y") %></p>
+            <%= link_to "Resume Workout", workout_path(@active_plan_enrollment.workouts.started.first), class: "btn-primary" %>
+          <% else %>
+            <%= button_to "Start Workout", workouts_path(workout: { plan_enrollment_id: @active_plan_enrollment.id, day: 1 }), method: :post, class: "btn-primary" %>
+          <% end %>
+          <%= link_to "View Plan", plan_enrollment_path(@active_plan_enrollment), class: "btn-link px-4" %>
+        </div>
       </article>
     <% else %>
       <p>No active plan</p>
