--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,5 +1,3 @@
-<h1>Workout#show</h1>
-
 <section>
   <header>
     <h1>Workout</h1>
@@ -8,16 +6,18 @@
   <article>
     <h2>Workout Details</h2>
     <%= form_with model: @workout, url: workout_path(@workout), method: :put do |form| %>
-    <ul>
+    <div class="flex flex-col gap-4">
       <% @entries.each_with_index do |entry, index| %>
-        <% set_number = 1 %>                  
-        <li><%= entry.exercise.name %> <%= entry.humanized_sets_and_reps %></li>
-        <%= form.fields_for :completed_sets, @completed_sets_by_entry[entry.id] do |completed_set_form| %>
-          <%= render 'completed_sets/form', form: completed_set_form, entry: entry, set_number: set_number %>
-          <% set_number += 1 %>
-        <% end %>
+        <div class="bg-card border border-border p-4 rounded-md">
+          <% set_number = 1 %>                  
+          <h4 class="text-primary"><%= entry.exercise.name %> <%= entry.humanized_sets_and_reps %></h4>
+          <%= form.fields_for :completed_sets, @completed_sets_by_entry[entry.id] do |completed_set_form| %>
+            <%= render 'completed_sets/form', form: completed_set_form, entry: entry, set_number: set_number %>
+            <% set_number += 1 %>
+          <% end %>
+        </div>
       <% end %>
-    </ul>
+    </div>
     <%= form.submit "Complete Workout" %>
     <% end %>
   </article>
