--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -4,6 +4,25 @@
   </header>
 
   <%= turbo_stream_from @workout %>
+  <% if @workout.started? %>
+    <article>
+      <h2>Workout Details</h2>
+      <div class="flex flex-col gap-4">
+        <% @entries.each_with_index do |entry, index| %>
+          <div class="bg-card border border-border p-4 rounded-md">
+            <% set_number = @workout.completed_set_count_for_entry(entry) + 1 %>                  
+            <h4 class="text-primary"><%= entry.exercise.name %> <%= entry.humanized_sets_and_reps %></h4>
+            <%= render partial: 'completed_sets/completed_set', collection: @completed_sets_by_entry[entry.id], as: :completed_set %>
+            <% @workout.sets_left_to_complete(entry).times do |i| %>
+              <%= render 'completed_sets/form', completed_set: @workout.completed_sets.build, entry: entry, order: set_number + i %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+
+      <%= button_to "Complete Workout", workout_path(@workout, params: { workout: { status: :completed, completed_at: Time.now } }), method: :put, class: "btn-primary" %>
+    </article>
+<% else %>
   <article>
     <h2>Workout Details</h2>
     <div class="flex flex-col gap-4">
@@ -12,13 +31,10 @@
           <% set_number = @workout.completed_set_count_for_entry(entry) + 1 %>                  
           <h4 class="text-primary"><%= entry.exercise.name %> <%= entry.humanized_sets_and_reps %></h4>
           <%= render partial: 'completed_sets/completed_set', collection: @completed_sets_by_entry[entry.id], as: :completed_set %>
-          <% @workout.sets_left_to_complete(entry).times do |i| %>
-            <%= render 'completed_sets/form', completed_set: @workout.completed_sets.build, entry: entry, order: set_number + i %>
-          <% end %>
         </div>
       <% end %>
     </div>
 
-    <%= button_to "Complete Workout", workout_path(@workout, params: { workout: { status: :completed } }), method: :put, class: "btn-primary" %>
   </article>
+<% end %>
 </section>
