--- a/app/views/plan_enrollments/show.html.erb
+++ b/app/views/plan_enrollments/show.html.erb
@@ -1,7 +1,5 @@
 <section>
-  <header>
-    <h1>Plan Enrollment</h1>
-  </header>
+  <%= render "shared/header", title: "Plan Enrollment" %>
 
   <article>
     <h2>Plan Name</h2>
