--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an Account</h1>
+<%= render "shared/header", title: "Create an Account" %>
 
 <%= form_with model: @user do |form| %>
   <%= render "shared/errors", object: @user %>
