--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Forgot your password?</h1>
+<%= render "shared/header", title: "Forgot your password?" %>
 
 <%= form_with url: passwords_path do |form| %>
   <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address] %><br>
