--- a/app/views/plans/_plan.html.erb
+++ b/app/views/plans/_plan.html.erb
@@ -1,4 +1,4 @@
-<h1><%= plan.name %></h1>
+<%= render "shared/header", title: plan.name %>
 
 <% entries_by_day = plan.entries_by_day %>
 <div data-controller="checklist">
