--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Plan</h1>
+<%= render "shared/header", title: "New Plan" %>
 
 <% if @plan.days.blank? %>
   <%= render "initialize_days_form", plan: @plan %>
