--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -10,9 +10,13 @@
           <div class="bg-card border border-border p-4 rounded-md">
             <% set_number = @workout.completed_set_count_for_entry(entry) + 1 %>                  
             <h4 class="text-primary"><%= entry.exercise.name %> <%= entry.humanized_sets_and_reps %></h4>
-            <%= render partial: 'completed_sets/completed_set', collection: @completed_sets_by_entry[entry.id], as: :completed_set %>
+            <div id="completed-sets">
+              <%= render partial: 'completed_sets/completed_set', collection: @completed_sets_by_entry[entry.id], as: :completed_set %>
+            </div>
             <% @workout.sets_left_to_complete(entry).times do |i| %>
-              <%= render 'completed_sets/form', completed_set: @workout.completed_sets.build, entry: entry, order: set_number + i %>
+              <%= turbo_frame_tag dom_id(CompletedSet, "completed-set-#{set_number + i}-#{entry.id}"), refresh: 'morph' do %>
+                <%= render 'completed_sets/form', completed_set: @workout.completed_sets.build, entry: entry, order: set_number + i %>
+              <% end %>
             <% end %>
           </div>
         <% end %>
